2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Replace some internal char classifiers with <ctype.h>

	* src/worddef.h, src/filterrtf.cpp, src/filterhtml.cpp:
	  - Drop isSpace(), use isspace() instead.
	  - Drop isHex(), use isxdigit() instead.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/worddef.h:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp:
	  - Declare internal functions static.
	  - Simplify myyisspace() and make it bool.
	  - Simplify RemoveJunkChars() and invert IsJunkChar() to
	    IsValidChar().

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::MaxWordSeg):
	  - Reformat c-tor.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/longwordseg.h, src/longwordseg.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h:
	  - Remove obfuscated comment after last #endif.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.h, src/maxwordseg.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h, src/abswordseg.cpp:
	  - Reformat source as GNU style using "indent -nut" plus manual
	    adjustments.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Adjust loops.

2011-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Tokenize punctuation marks in chunks, not in characters,
	    to prevent breaking word in between, fixing problem with `` or ''
	    at line beginning in LaTeX. This should also be true in general.
